mywork/force-app/main/default/objects/Sprint_User__c/Sprint_User__c.object-meta.xml
<CustomObject>
    <label>Sprint User</label>
    <nameField>
        <displayFormat>SU-{000000}</displayFormat>
        <label>Sprint User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>