mywork/force-app/main/default/objects/Sprint_User__c/fields/ALM_User__c.field-meta.xml
<CustomField>
    <fullName>ALM_User__c</fullName>
    <label>ALM User</label>
    <referenceTo>ALM_User__c</referenceTo>
    <relationshipLabel>Spint Users</relationshipLabel>
    <relationshipName>Spint_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>