mywork/force-app/main/default/objects/Sprint_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Role</label>
    <referenceTo>ALM_User_Role__c</referenceTo>
    <relationshipLabel>Spint Users</relationshipLabel>
    <relationshipName>Spint_Users</relationshipName>
    <type>Lookup</type>
</CustomField>